salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/Buzon_test__c.object-meta.xml
<CustomObject>
    <description>Objeto de pruebas para Subir facturas (opciones A y B). No se usa en el Buzón contable real.</description>
    <label>Buzón test</label>
    <nameField>
        <displayFormat>BT-{00000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buzón test</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>