salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Buzón test</relationshipLabel>
    <relationshipName>Buzon_test</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>