salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/fields/Estado_sincronizacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_sincronizacion__c</fullName>
    <label>Estado de sincronización</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Subiendo</fullName>
            </value>
            <value>
                <fullName>Subido</fullName>
            </value>
            <value>
                <fullName>Verificado</fullName>
            </value>
            <value>
                <fullName>Sincronizado</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>