salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/fields/GCS_ruta__c.field-meta.xml
<CustomField>
    <fullName>GCS_ruta__c</fullName>
    <label>Ruta en Cloud Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>