salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/fields/Google_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Id__c</fullName>
    <label>Id en Google</label>
    <length>64</length>
    <type>Text</type>
</CustomField>