salesforce-sandbox/force-app/main/default/objects/Buzon_test__c/fields/Intentos__c.field-meta.xml
<CustomField>
    <fullName>Intentos__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Intentos de sincronización</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>